Fix layout issues

--- a/docs/src/app/(private)/experiments/infra/SettingsPanel.module.css
+++ b/docs/src/app/(private)/experiments/infra/SettingsPanel.module.css
@@ -1,8 +1,8 @@
 .Popup {
   outline: 1px solid var(--color-gray-200);
   box-shadow:
-    0px 10px 15px -3px var(--color-gray-200),
-    0px 4px 6px -4px var(--color-gray-200);
+    0 10px 15px -3px var(--color-gray-200),
+    0 4px 6px -4px var(--color-gray-200);
   padding: 1rem;
   box-sizing: border-box;
   border-radius: 0.375rem;
@@ -13,18 +13,27 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  transform-origin: var(--transform-origin);
+  transition:
+    transform 150ms,
+    opacity 150ms;
+
+  &[data-starting-style],
+  &[data-ending-style] {
+    opacity: 0;
+    transform: scale(0.9);
+  }
 }
 
 .Trigger {
   position: fixed;
-  top: 28px;
-  right: 28px;
+  top: 20px;
+  right: 20px;
   padding: 4px;
   box-sizing: border-box;
   width: 34px;
   height: 34px;
   display: flex;
-
   align-items: center;
   justify-content: center;
   gap: 0.375rem;
