--- a/docs/src/app/(private)/layout.css
+++ b/docs/src/app/(private)/layout.css
@@ -3,3 +3,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+}
